welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
if (estFaceMur()==true&&getDirection()==Direction.NORD){return true}
^SnakeBuggle:16: error: not found: value fonctionTest
do{pasDeSerpent();}while(fonctionTest()==true)
                         ^