welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();
def fontionTest(): Boolean ={

if (estFaceMur()==true&&getDirection()==Direction.NORD){return true}

}
			   
def pasDeSerpent(){
if(estFaceMur()==true){
	if(getDirection() == Direction.EST){gauche(); avance(); gauche();}
	else{if (getDirection() == Direction.OUEST){droite();avance();droite();}}
}else{avance();}
}
do{pasDeSerpent();}while(fonctionTest()==true)
	
}


